--- a/mbd_website/pubspec.yaml
+++ b/mbd_website/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  freezed: ^2.4.1
+  get_it: ^7.6.0
+  injectable: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
