--- a/mbd_website/pubspec.yaml
+++ b/mbd_website/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   injectable_generator: ^2.3.0
   dartz: ^0.10.0
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+  iconify_flutter: ^0.0.5
+  url_launcher: ^6.2.4
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
